Fixed spacing between toggle and table

--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -123,7 +123,7 @@ table
     width: 100%
     background:  $dark-hover
     color: $delta
-    padding: 10px 20px
+    padding: 10px 0px 20px 20px
     border: none
     border-radius: 8px
     font-size: 16px
@@ -159,3 +159,10 @@ table
         max-height: 500px
         opacity: 1
         visibility: visible
+
+p
+    line-height: 1.7
+    color: $alpha
+    font-weight: 300
+    margin-bottom: 0px
+    letter-spacing: 0.4px
